GERONIMO-4989 basic support for ServletContext.getResource from bundle.getEntry
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@892003 13f79535-47bb-0310-9956-ffa450edef68